# MyGCS

./: CMakeLists.txt  CMakeLists.txt.user.f16b443
src/: CMakeLists.txt  QGCApplication.cc
src/Camera/: SimulatedCameraControl.cc
src/FlightDisplay/: FlightDisplayViewVideo.qml  FlyViewMap.qml  FlyViewVideo.qml
src/FlightMap/Widgets/: PhotoVideoControl.qml
src/VideoManager/: VideoManager.h
src/VideoManager/VideoReceiver/GStreamer/: GStreamer.cc  GstVideoReceiver.cc
src/vahid/: CMakeLists.txt  ImageFootprintCalculator.cc  ImageFootprintCalculator.h
